# MetaCppNN

./: CMakeLists.txt  LICENSE  README.md
ChapterI/: CMakeLists.txt
ChapterI/Solution1/: CMakeLists.txt  main.cpp
ChapterII/: CMakeLists.txt
ChapterII/Solution1/: CMakeLists.txt  main.cpp  var_type_dict.h
ChapterII/Solution2/: CMakeLists.txt  main.cpp
ChapterII/Solution3/: CMakeLists.txt  main.cpp
ChapterII/Solution4/: CMakeLists.txt  main.cpp
ChapterIII/: CMakeLists.txt
ChapterIII/Solution1/: main.cpp
ChapterIII/Solution2/: main.cpp
cmake/: Helpers.cmake  Packages.cmake
cmake/Modules/: FindBOOK.cmake
